# rom-vault

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  db.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_publisher_list.sql  003_discs.sql  004_game_title_lookup.sql  005_tags.sql  006_playlists.sql  007_emulators.sql  008_play_tracking.sql  009_play_sessions.sql  010_rom_hashes.sql  011_hasheous.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AddExclusiveForm.tsx  ArtPickerModal.tsx  ArtworkImage.tsx  CompanyConsoleModals.tsx  ConsoleCatalogModal.tsx  ConsolePicker.tsx  ConsoleStatCard.tsx  DuplicateCleaner.tsx  ExclusiveRow.tsx  ExclusivesSidebar.tsx  GuideCard.tsx  ListPickerModal.tsx  OnThisDayPanel.tsx  PlaySplash.tsx  RomCardLarge.tsx  RomCardSmall.tsx  RomList.tsx  RomRow.tsx  ScanResultPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  Spinner.tsx  SurpriseModal.tsx  TagManager.tsx  Tooltip.tsx  WelcomeScreen.tsx
src/data/: companyLogos.ts  consoleCatalog.ts  consoleSvgs.ts  emulatorHints.ts  exclusivesData.ts  guideData.ts  onThisDay.ts  platformLogos.ts  platformLogosDark.ts  shelfLogos.ts
src/hooks/: useApiKeys.ts  useAppSettings.ts  useArtwork.ts  useBulkFetch.ts  useDuplicateCleaner.ts  useEmulators.ts  useExclusives.ts  useFolderScan.ts  useGamepad.ts  useLogo.ts  usePlaylists.ts  useRoms.ts  useSettings.ts  (+4 more)
(+6 files in other folders)
