[package]
name    = "rom-vault"
version = "1.0.0"
edition = "2021"

[lib]
name = "rom_vault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rom-vault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
regex        = "1"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
zip          = { version = "0.6", default-features = false, features = ["deflate"] }
sevenz-rust2 = "0.7"
crc32fast    = "1"
md-5         = "0.10"
sha1         = "0.10"
digest       = "0.10"
open         = "5"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
